# ADIOS2-Image-Metadata-Management-System

./: CMakeLists.txt  README.md  executable.cpp
Data-Input/exp2/: metadata.txt
Data-Input/exp3/: metadata.txt
Data-Output/exp1/: metadata.txt
